# openFactory

./: .gitignore  .travis.yml  README.md
conan/: conanfile.py  install.sh
doc/: Doxyfile
doc/source/: conf.py  index.rst
docs/: Doxyfile  conf.py  index.rst  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/api/: class_view_hierarchy.doctree  dir_src.doctree  dir_src_spide2d.doctree  dir_src_spide2d_include.doctree  dir_src_spide2d_include_spide2d.doctree  dir_src_spide2d_src.doctree  dir_src_spide2d_src_backend_sdl.doctree  file_src_spide2d_include_spide2d_hotkey.hpp.doctree  file_src_spide2d_include_spide2d_key.hpp.doctree  file_src_spide2d_include_spide2d_window.hpp.doctree  file_src_spide2d_src_backend_sdl_sdlwindow.cpp.doctree  file_src_spide2d_src_backend_sdl_sdlwindow.hpp.doctree  file_src_spide2d_src_hotkey.cpp.doctree  (+22 more)
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/api/: dir_src.rst  dir_src_spide2d_include_spide2d.rst  dir_src_spide2d_src.rst  file_src_spide2d_include_spide2d_hotkey.hpp.rst  file_src_spide2d_include_spide2d_key.hpp.rst  file_view_hierarchy.rst  namespace_spide2d.rst  namespace_spide2d__priv.rst  program_listing_file_src_spide2d_include_spide2d_key.hpp.rst  program_listing_file_src_spide2d_include_spide2d_window.hpp.rst  program_listing_file_src_spide2d_src_backend_sdl_sdlwindow.hpp.rst  program_listing_file_src_spide2d_src_window.cpp.rst  structspide2d_1_1hotkey.rst  unabridged_orphan.rst
src/: .clang-format  meson.build
src/game/src/: game.cpp  game.hpp  main.cpp
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
src/spide2d/: meson.build
src/spide2d/include/spide2d/: hotkey.hpp  hotkeys.hpp  key.hpp  window.hpp
src/spide2d/src/: hotkey.cpp  hotkeys.cpp  window.cpp
src/spide2d/src/backend_sdl/: sdlwindow.cpp  sdlwindow.hpp
(+89 files in other folders)
